add tailwind css and update my UI and design

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,12 @@
       content="GitHub repositories fetch and display"
       data-react-helmet="true"
     />
-    <meta name="google-site-verification" content="d6iHX9Cf-A_MbqEl0EIMMVkf6Zg_O5Va1j9Dcs0-dF8" />
+    <meta
+      name="google-site-verification"
+      content="d6iHX9Cf-A_MbqEl0EIMMVkf6Zg_O5Va1j9Dcs0-dF8"
+    />
     <link rel="apple-touch-icon" href="/account.png" />
-    
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -28,6 +31,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
